@@ -157,6 +157,7 @@ wxMSW:
   SmartPhone.
 - Fixed rendering of borders for wxTextCtrl with wxTE_RICH(2) style when
   using Windows XP's Classic UI theme.
+- Text controls with wxTE_RICH style now also generate wxClipboardTextEvents.
 
 wxGTK:
 
